--- a/.github/workflows/front-end.yml
+++ b/.github/workflows/front-end.yml
@@ -23,4 +23,5 @@ jobs:
             git pull origin main
             npm install
             npm run build
+            sudo systemctl reload nginx
 
