--- a/.github/workflows/front-end.yml
+++ b/.github/workflows/front-end.yml
@@ -23,5 +23,5 @@ jobs:
             git pull origin master
             npm install
             npm run build
-            sudo -S systemctl reload nginx
+            sudo systemctl reload nginx
 
