--- a/.github/workflows/front-end.yml
+++ b/.github/workflows/front-end.yml
@@ -18,6 +18,7 @@ jobs:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_SSH_KEY }}
+          port: 22
           script: |
             cd /var/www/scm-frontend/SCM_UI
             git pull origin master
