--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 # VITE_WS_URL=ws://127.0.0.1:8000
 
 
-VITE_API_URL=https://odooerp.staunchtec.com
+VITE_API_URL=https://20.244.0.96:9000
 VITE_WS_URL=ws://odooerp.staunchtec.com
