--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.540.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
+    "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.2",
     "recharts": "^3.2.1",
