--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "framer-motion": "^12.23.24",
     "lodash": "^4.17.21",
     "lucide-react": "^0.540.0",
     "prop-types": "^15.8.1",
