--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "^19.1.1",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.1",
-    "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.64",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.2",
     "recharts": "^3.2.1",
+    "remark-gfm": "^4.0.1",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
